--- a/views/members.ejs
+++ b/views/members.ejs
@@ -66,7 +66,7 @@
                 <div class="form-group">
                     <input type="text" class="form-control" name="UUID" placeholder="Enter Passcode">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Purchase</button>
             </form>
             <p class="navbar-text" id="rightlabel"></p>
 
