--- a/views/members.ejs
+++ b/views/members.ejs
@@ -49,7 +49,7 @@
                                 items.forEach(function(item){
                                 if(item.type == 'auction'){
                         %>
-                        <li><a href="javascript:changeSRC('<%=item.description%>');itemClicked('<%=item.name%>', '<%=item.ccp%>', '<%=item.quantity%>');"><%=item.name %></a></li>
+                        <li><a id="transact" href="javascript:changeSRC('<%=item.description%>');itemClicked('<%=item.name%>', '<%=item.ccp%>', '<%=item.quantity%>');"><%=item.name %></a></li>
                         <% } })  } %>
                     </ul>
                 </li>
@@ -65,10 +65,11 @@
             <form  style="float:left;" class="navbar-form navbar-left" action="/buystore" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" name="UUID" placeholder="Enter Passcode">
+                    <input type="hidden" id="itemNameInput" name="name">
                 </div>
                 <button type="submit" class="btn btn-default">Purchase</button>
             </form>
-            <p class="navbar-text" id="rightlabel"></p>
+            <p class="navbar-text" id="rightLabel"></p>
 
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -78,13 +79,20 @@
 
 </body>
 <script>
+    <% if(message) { %>
+            $('#rightLabel').text("<%=message%>");
+    <% } %>
     $('#mainiframe').css("margin-top", $('#mainnav').height());
 
     function changeSRC (src){
+        $('#rightLabel').text('');
         $('#mainiframe').attr('src', src);
     }
 
     function itemClicked (name, ccp, quantity){
+
+        if ($('transact').hasClass('disabled')) return;
+        $('transact').addClass('disabled');
         $('#itemname').text("Item Name: ");
         $('#leftlabel_first').text(name);
 
@@ -93,6 +101,8 @@
 
         $('#itemquantity').text("Item Quantity: ");
         $('#leftlabel_third').text(quantity);
+
+        $('#itemNameInput').val(name);
     }
 
     function clearLeftLabel(){
