--- a/views/members.ejs
+++ b/views/members.ejs
@@ -14,6 +14,8 @@
     Your browser doesn't support IFrames
 </iframe>
 
+<image id="doge" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVYx-eGnvoU8GF-Hd1mK-Mr_dsjMyANVPLJ_eMgeRuO9oKgJdb" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:30%; height:50%; border:none; margin:0; padding:0; overflow:hidden; z-index:-1;"> </image>
+
 <nav id="mainnav" class="navbar navbar-default" role="navigation" >
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -24,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="javascript:location.reload(true);">Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,6 +89,7 @@
     function changeSRC (src){
         $('#rightLabel').text('');
         $('#mainiframe').attr('src', src);
+        $('#doge').hide();
     }
 
     function itemClicked (name, ccp, quantity){
@@ -103,6 +106,8 @@
         $('#leftlabel_third').text(quantity);
 
         $('#itemNameInput').val(name);
+
+
     }
 
     function clearLeftLabel(){
